--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bbq",
   "author": "jden <jason@denizac.org>",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "AOP with Promises",
   "keywords": [
     ""
@@ -18,6 +18,6 @@
     "mocha": "~1.9.0"
   },
   "dependencies": {
-    "q": "~0.9.6"
+    "bluebird": "~0.11.5-0"
   }
 }
